--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-inline-environment-variables": "0.4.1",
     "express": "4.16.3",
     "next": "6.0.0",
     "react": "16.3.2",
