--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint --ignore-path .gitignore ."
   },
   "author": "Rizki Sunaryo",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "express": "4.16.3",
     "jsonwebtoken": "8.2.1",
     "uuid": "3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "4.19.1",
+    "eslint-config-strongloop": "2.1.0"
   }
 }
