--- a/utils/package.json
+++ b/utils/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel src --presets babel-preset-es2015 --plugins transform-object-rest-spread --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rizki Sunaryo",
   "license": "ISC",
   "dependencies": {
     "lodash": "4.17.10"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-es2015": "6.24.1"
   }
 }
