--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint --ignore-path .gitignore ."
+    "test": "eslint --fix --ignore-path .gitignore ."
   },
   "author": "Rizki Sunaryo",
   "license": "ISC",
