--- a/utils/package.json
+++ b/utils/package.json
@@ -10,7 +10,8 @@
   "author": "Rizki Sunaryo",
   "license": "ISC",
   "dependencies": {
-    "lodash": "4.17.10"
+    "lodash": "4.17.10",
+    "uuid": "3.2.1"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
