--- a/utils/package.json
+++ b/utils/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --plugins transform-object-rest-spread --out-dir dist",
+    "build": "rm -rf ./dist && babel src --presets babel-preset-es2015 --plugins transform-object-rest-spread --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rizki Sunaryo",
