--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
     "babel-plugin-transform-inline-environment-variables": "0.4.1",
     "express": "4.16.3",
     "next": "6.0.3",
-    "next-routes": "^1.4.2",
+    "next-routes": "1.4.2",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
